--- a/Uppgift3/TODO.txt
+++ b/Uppgift3/TODO.txt
@@ -1,8 +1,35 @@
-﻿Skriv ut statistik när systemet läser in eller sparar så det är lätt att se att det fungerar (se exempel).
+﻿*Done* Skriv ut statistik när systemet läser in eller sparar så det är lätt att se att det fungerar (se exempel).
+
+******************************
+* VÄLKOMMEN TILL BANKAPP 1.0 *
+******************************
+Läser in bankdata.txt...
+Antal kunder: 123
+Antal konton: 1234
+Totalt saldo: 123456789.00
+
+En lista ska visas med kundnummer och namn. Skriv ut kundnumret. //Eww, la till kommentar som bara o ta bort ifall du vill ha det där.
 
 Det ska gå att ta fram en kundbild genom att ange antingen ett kundnummer eller kontonummer. //Kontonummer!!!
 
-En lista ska visas med kundnummer och namn. Skriv ut kundnumret.
 
-Det ska också automatiskt skapas ett transaktionskonto med kunden som ägare.Systemet ska också hantera insättningar, uttag och överföringar mellan konton. Det får inte bli några
-avrundningsfel så använd rätt typ för saldo och belopp som är pengar.Det ska framgå tydligt om någon försöker ta ut eller överföra mer pengar än vad som finns på kontot!6 (Ta bort konto)7 (Insättning)8 (Uttag)9 (Överföring)10 (Ränta)Flytta in .txt filerna i en mapp och använd den istället. Hitta sätt att använda filen oberoende av top-level folders (aka samma kod för laptopen och datorn).
+
+
+Byt namn på alla variabler så fredrik inte får aids när han läser min kod.
+
+Flytta in .txt filerna i en mapp och använd den istället. Hitta sätt att använda filen oberoende av top-level folders (aka samma kod för laptopen och datorn).
+
+Fixa try.parse på allting.
+
+Det ska också automatiskt skapas ett transaktionskonto med kunden som ägare.
+
+Systemet ska också hantera insättningar, uttag och överföringar mellan konton. Det får inte bli några
+avrundningsfel så använd rätt typ för saldo och belopp som är pengar.
+
+Det ska framgå tydligt om någon försöker ta ut eller överföra mer pengar än vad som finns på kontot!
+
+6 (Ta bort konto)
+7 (Insättning)
+8 (Uttag)
+9 (Överföring)
+10 (Ränta)
