Added overdraft and debtinterest and ways to change them. Also prints to transactions.

--- a/Uppgift3/TODO.txt
+++ b/Uppgift3/TODO.txt
@@ -37,17 +37,17 @@ Lägg till stöd för sparränta på konton. Sparräntan är en årsränta och s
 konto. Räntan måste vara positiv. Gör ett menyalternativ som räknar ut och lägger på dagens ränta på
 alla konton. En transaktion ska skapas på varje konto för insättningen av ränta.
 
-
-
-
-
-
-
 Lägg till stöd checkkredit på konto genom att lägga till egenskaper för kreditgräns och skuldränta på
 varje konton. Kreditgräns och skuldränta ska kunna ändras per konto. Om ett konto har en kreditgräns
-på 10000 kr så kan pengar tas ut och överföras till saldot på konto är som lägst -10000 kronor.
+på 10000 kr så kan pengar tas ut och överföras tills saldot på kontot är som lägst -10000 kronor.
 Komplettera rutinen för ränteberäkning med att lägga på skuldränta på konton där saldot är under noll.
 När skuldränta debiteras kan saldot gå under kreditgränsen.
+
+
+
+
+
+
 
 Skapa Unit Tester som verifierar att uttag och överföringar fungerar med checkkredit och räntan
 beräknas korrekt.
